# mozplugger

./: .gitignore  ChangeLog  Makefile.in  Makefile.old  README  child.c  child.h  cmd_flags.h  config.h.in  configure  configure.ac  debug.c  debug.h  exportmap  mozplugger-common.c  mozplugger-controller.c  mozplugger-helper.c  mozplugger-linker.c  mozplugger-update.c  mozplugger.7  mozplugger.c  mozplugger.h  mozplugger.spec  mozpluggerrc  npn-get-helpers.c  npn-get-helpers.h  pipe_msg.h  plugin_entry.c  plugin_entry.h  plugin_name.h  scriptable_obj.c  scriptable_obj.h  widgets.c  widgets.h
debian/: changelog  control  gbp.conf  mozplugger.NEWS  mozplugger.install  mozplugger.links  postinst  postrm  preinst  watch
debian/manpages/: mozplugger-controller.1  mozplugger-helper.1  update-mozpluggerrc.8
debian/mozpluggerrc.d/: 20-header.conf  40-global_defs.conf  60-video.conf  61-audio.conf  62-documents.conf
debian/patches/: 00Makefile.patch  01-manpages.patch  02-mozpluggerrc.patch  series
npapi/: np_funcs.h  npapi.h  npn_func_tab.h  npn_funcs.c  npn_funcs.h  npp_func_tab.h  npp_funcs.c  npp_funcs.h  npruntime.h
npapi/common/: npunix.c
npapi/include/: npapi.h  npupp.h
